logic of role module, and deploy friendly 404 error page

--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
@@ -64,8 +64,8 @@
     <div id="main-content" class="container">
         <h5 class="title">
             <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
-               onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a>
-            <span th:text="'&nbsp;|&nbsp;编辑广告机——'+${advertisementMachine.id==-2?'新增广告机':advertisementMachine.name}"></span>
+               onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a><span
+                th:text="'&nbsp;|&nbsp;编辑广告机——'+${advertisementMachine.id==-2?'新增广告机':advertisementMachine.name}"></span>
         </h5>
         <ul>
             <li class="divider"></li>
