--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
@@ -121,7 +121,7 @@
                 <div class="input-field col s12 m12 l12">
                     <i class="material-icons prefix">insert_comment</i>
                     <textarea id="remark" name="remark" class="materialize-textarea" placeholder=""
-                              th:value="${advertisementMachine.remark}"></textarea>
+                              th:text="${advertisementMachine.remark}"></textarea>
                     <label for="remark">备注</label>
                 </div>
             </div>
