--- a/src/main/webapp/WEB-INF/templates/role/roleForm.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleForm.html
@@ -87,7 +87,7 @@
 
                 <div class="input-field col s12 m12 l12">
                     <i class="material-icons prefix">insert_comment</i>
-                    <textarea id="remark" name="remark" th:value="${role.remark}" class="materialize-textarea"
+                    <textarea id="remark" name="remark" th:text="${role.remark}" class="materialize-textarea"
                               placeholder=""></textarea>
                     <label for="remark">备注</label>
                 </div>
