--- a/src/main/webapp/WEB-INF/templates/user/userForm.html
+++ b/src/main/webapp/WEB-INF/templates/user/userForm.html
@@ -59,78 +59,99 @@
         </div>
     </nav>
 </header>
-
+<!--/*@thymesVar id="user" type="com.xmlan.machine.module.user.entity.User"*/-->
+<!--/*@thymesVar id="dropdownRoleList" type="java.util.List<com.xmlan.machine.module.role.entity.Role>"*/-->
 <main>
     <div id="main-content" class="container">
         <h5 class="title">
             <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
-               onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a>&nbsp;|&nbsp;编辑用户——名称
+               onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a> <span
+                th:text="'&nbsp;|&nbsp;编辑用户——'+${user.id==-2?'新增用户':user.username}"></span>
         </h5>
         <ul>
             <li class="divider"></li>
         </ul>
 
-        <form action="#" method="post">
+        <form th:action="@{${adminPath}+'/user/save/'+${user.id}}" method="post" onsubmit="return save();">
             <!--/* <editor-fold desc="hidden fields"> */-->
-            <input id="id" name="id" type="hidden" disabled="disabled" class="validate" required="required"/>
+            <input id="id" name="id" type="hidden" th:value="${user.id}" disabled="disabled" class="validate"
+                   required="required"/>
             <!--/* </editor-fold> */-->
 
             <div class="row">
                 <div class="input-field col s6 m3 l3">
                     <i class="material-icons prefix">assignment_ind</i>
-                    <input id="username" name="username" type="text" class="validate" placeholder="输入用户名"
-                           required="required"/>
+                    <input id="username" name="username" th:value="${user.username}" type="text" class="validate"
+                           placeholder="输入用户名" required="required"/>
                     <label for="username">用户名</label>
                 </div>
                 <div class="input-field col s6 m3 l3">
                     <i class="material-icons prefix">account_circle</i>
-                    <input id="authname" name="authname" type="text" class="text" placeholder="输入登录账号"
-                           required="required"/>
+                    <th:block th:switch="${user.id}">
+                        <input th:case="-2" id="authname" name="authname" th:value="${user.authname}" type="text"
+                               class="text" placeholder="输入登录账号" required="required"/>
+                        <input th:case="*" id="authname" name="authname" th:value="${user.authname}" type="text"
+                               class="text" readonly="readonly" placeholder="输入登录账号" required="required"/>
+                    </th:block>
                     <label for="authname">登录名</label>
                 </div>
                 <div class="input-field col s6 m3 l3">
                     <i class="material-icons prefix">lock_outline</i>
-                    <input id="password" name="password" type="password" class="text"
-                           placeholder="输入登录密码" required="required"/>
+                    <th:block th:switch="${user.id}">
+                        <input th:case="-2" id="password" name="password" th:value="${user.password}" type="password"
+                               class="text" placeholder="输入登录密码" required="required"/>
+                        <input th:case="*" id="password" name="password" th:value="${user.password}" type="password"
+                               class="text" placeholder="输入登录密码" required="required" readonly="readonly"/>
+                    </th:block>
                     <label for="password">登录密码</label>
                 </div>
                 <div class="input-field col s6 m3 l3">
                     <i class="material-icons prefix">lock</i>
-                    <input id="confirmPassword" name="confirmPassword" type="password" class="text"
-                           placeholder="重新确认密码" required="required"/>
+                    <th:block th:switch="${user.id}">
+                        <input th:case="-2" id="confirmPassword" name="confirmPassword" th:value="${user.password}"
+                               type="password" class="text" placeholder="重新确认密码" required="required"/>
+                        <input th:case="*" id="confirmPassword" name="confirmPassword" th:value="${user.password}"
+                               type="password" class="text" placeholder="重新确认密码" required="required"
+                               readonly="readonly"/>
+                    </th:block>
                     <label for="confirmPassword">确认密码</label>
                 </div>
 
                 <div class="input-field col s12 m3 l3">
                     <i class="material-icons prefix">smartphone</i>
-                    <input id="phone" name="phone" type="text" placeholder="输入手机号"/>
+                    <input id="phone" name="phone" th:value="${user.phone}" type="text" placeholder="输入手机号"/>
                     <label for="phone">联系电话</label>
                 </div>
                 <div class="input-field col s12 m3 l3">
                     <i class="material-icons prefix">date_range</i>
-                    <input id="addTime" name="addTime" type="text" class="date-picker" placeholder="选择加入时间"/>
+                    <input id="addTime" name="addTime" th:value="${user.addTime}" type="text" class="date-picker"
+                           placeholder="选择加入时间"/>
                     <label for="addTime">加入时间</label>
                 </div>
                 <div class="input-field col s12 m3 l3">
                     <i class="material-icons prefix">group</i>
                     <select id="roleID" name="roleID">
-                        <option value="" disabled="disabled" selected="selected">选择角色</option>
-                        <option value="1">角色1</option>
-                        <option value="2">角色2</option>
-                        <option value="3">角色3</option>
+                        <!--/*@thymesVar id="roleName" type="java.lang.String"*/-->
+                        <option th:value="${user.roleID}" th:text="${roleName}"
+                                disabled="disabled" selected="selected"></option>
+                        <option value="-1">不选择</option>
+                        <option th:each="item : ${dropdownRoleList}" th:value="*{item.id}"
+                                th:text="*{item.name}"></option>
                     </select>
                     <label for="roleID">所属角色</label>
                 </div>
 
                 <div class="input-field col s12 m12 l12">
                     <i class="material-icons prefix">place</i>
-                    <input id="address" name="address" type="text" class="validate" placeholder="输入地址"/>
+                    <input id="address" name="address" th:value="${user.address}" type="text" class="validate"
+                           placeholder="输入地址"/>
                     <label for="address">地址</label>
                 </div>
 
                 <div class="input-field col s12 m12 l12">
                     <i class="material-icons prefix">insert_comment</i>
-                    <textarea id="remark" name="remark" class="materialize-textarea" placeholder=""></textarea>
+                    <textarea id="remark" name="remark" th:text="${user.remark}" class="materialize-textarea"
+                              placeholder=""></textarea>
                     <label for="remark">备注</label>
                 </div>
             </div>
@@ -176,7 +197,25 @@
             closeOnSelect: true
         });
         $("#roleID").material_select();
+        var message = '[[${message}]]';
+        if (message !== '') {
+            Materialize.toast(message, 5000);
+        }
     });
+
+    function save() {
+        // pass check
+        if ($("#password").val() !== $("#confirmPassword").val()) {
+            Materialize.toast("确认密码输入不匹配登录密码",5000);
+            return false;
+        }
+        // Phone validate
+        if (!(/^((86)|(\+86))?(\-)?1[3|4|5|7|8][0-9]\d{8}$/.test($("#phone").val()))) {
+            Materialize.toast("手机号格式不正确",5000);
+            return false;
+        }
+        return true;
+    }
 </script>
 </body>
 </html>
